--- a/src/pages/Homepage/Contact.css
+++ b/src/pages/Homepage/Contact.css
@@ -3,6 +3,8 @@
     justify-content: center;
     align-items: center;
     padding-top: 50px;
+    margin-bottom: 0;
+    padding-bottom: 0;
   }
   
   body[data-theme='dark'] .contact_content {
