--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 
 .splash-container {
   position: fixed;
@@ -32,4 +38,10 @@
   100% {
     opacity: 0;
   }
+}
+
+.parallax-bg {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
 }
