--- a/src/pages/Homepage/Projects.css
+++ b/src/pages/Homepage/Projects.css
@@ -2,7 +2,6 @@
   width: 100%;
   height: 300px;
   object-fit: cover;
-  display: block;
   transition: all .4s ease-in-out;
 }
 
@@ -44,12 +43,15 @@
 
 .project-portfolio figure {
   margin: 0 20px 20px 0;
-  position: relative;
   text-align: center;
   border: 3px solid #000;
   border-radius: 8px;
   overflow: hidden;
   transition: all .4s ease-in-out;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
 }
 
 .project-portfolio figure:hover {
@@ -58,24 +60,28 @@
 
 .project-portfolio figure:hover .portfolio-img {
   opacity: .3;
-  transform: scale(5);
+  transform: scale(2);
 }
 
-.project-portfolio figure:hover figcaption {
-  top: 50%;
-  margin-top: -20px;
-}
 
-.project-portfolio figure:hover h3 {
-  bottom: 70%;
-}
 
 .project-portfolio figcaption {
   position: absolute;
-  width: 100%;
-  top: 100%;
+  top: 0;
   left: 0;
-  transition: all .2s ease-in-out .2s;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  transition: opacity .2s ease-in-out;
+}
+
+
+.project-portfolio figure:hover figcaption {
+  opacity: 1; /* Make figcaption visible */
 }
 
 .portfolio-link {
@@ -88,6 +94,7 @@
   height: 50px;
   line-height: 50px;
   border-radius: 50%;
+  margin: 20px 0;
   display: inline-block;
   transition: all .2s ease-in-out;
   text-align: center;
@@ -105,18 +112,18 @@
 
 .portfolio-title {
   color: #fff;
+  font-size: 30px;
   font-weight: 300;
   text-transform: uppercase;
   text-shadow: 0 0 5px rgba(0, 0, 0, 0.6);
   font-weight: 500;
-  padding: 1em .7em;
+  padding: 0.5px 1px;
   border-radius: 50%;
-  position: absolute;
-  bottom: 100%;
-  left: 0;
-  width: 100%;
+  position: relative;
+  bottom: auto;
+  left: auto;
+  width: auto;
   display: inline-block;
-  padding: 0;
   margin: 0;
   transition: all .15s ease-in-out .4s;
 }
@@ -125,10 +132,11 @@
   color: #fff;
   text-shadow: 0 0 5px rgba(0, 0, 0, 0.6);
   font-weight: 300;
-  position: absolute;
-  bottom: 80%; 
-  left: 0;
-  width: 100%;
+  position: relative;
+  bottom: auto;
+  left: auto;
+  width: auto;
+  text-align: center;
   display: inline-block;
   margin: 0;
   transition: all .15s ease-in-out .4s;
