--- a/src/pages/Homepage/Projects.css
+++ b/src/pages/Homepage/Projects.css
@@ -64,7 +64,6 @@
 }
 
 
-
 .project-portfolio figcaption {
   position: absolute;
   top: 0;
@@ -95,7 +94,9 @@
   line-height: 50px;
   border-radius: 50%;
   margin: 20px 0;
-  display: inline-block;
+  display: flex; /* Added for centering */
+  align-items: center; /* Center vertically */
+  justify-content: center;
   transition: all .2s ease-in-out;
   text-align: center;
 }
@@ -105,9 +106,9 @@
 }
 
 .github-inner-icon {
-  width: 30px;
-  height: 30px;
-  vertical-align: middle; 
+  width: 40px;
+  height: 40px;
+  vertical-align: center;
 }
 
 .portfolio-title {
