--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -117,26 +117,49 @@ li:hover {
   padding: 25px;
 }
 
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+    box-shadow: 0 0 5px #BB8FCE;
+  }
+
+  50% {
+    transform: scale(1.1);
+    box-shadow: 0 0 20px #BB8FCE, 0 0 30px #BB8FCE;
+  }
+
+  100% {
+    transform: scale(1);
+    box-shadow: 0 0 5px #BB8FCE;
+  }
+}
+
 .intro-section .📦 {
-  width: 33px;
-  height: 33px;
+  background: none;
+  width: 100px;
+  height: 60px;
   position: relative;
   display: block;
-  transform-origin: -50% center;
-  border-radius: 15%;
-  background: linear-gradient(135deg, #4A7C9E, #DAE5ED);
+  transform-origin: center;
+  border-radius: 60%;
+  background: linear-gradient(135deg, #7D3C98, #BB8FCE);
+  animation: pulse 2s infinite;
 }
 
 .intro-section .📦:after {
+  top: -33px;
+  left: -16.5px;
   content: "";
-  width: 100%;
-  height: 100%;
+  width: 50px;
+  height: 50px;
+  border-left: 6.5px solid transparent;
+  border-right: 6.5px solid transparent;
+  border-top: 25px solid #7D3C98; 
   position: absolute;
   top: 0;
   right: 0;
-  background-color: lightblue;
+  background-color: #C39BD3;
   border-radius: 15%;
-  /* Customize as needed */
   box-shadow: 0px 0px 10px 0px rgba(28, 159, 255, 0.4);
 }
 
@@ -311,23 +334,23 @@ li:hover {
 
 /* Additional styling for 📦 elements */
 .intro-section .📦:nth-child(2):after {
-  background-color: #1C9FFF;
+  background-color: #884EA0;  
 }
 
 .intro-section .📦:nth-child(3):after {
-  background-color: #1FB1FD;
+  background-color: #A569BD;  
 }
 
 .intro-section .📦:nth-child(4):after {
-  background-color: #22C7FB;
+  background-color: #BB8FCE; 
 }
 
 .intro-section .📦:nth-child(5):after {
-  background-color: #23D3FB;
+  background-color: #C39BD3; 
 }
 
 .intro-section .name-highlight {
-  color: red;
+  color: #7D3C98;
   font-weight: bolder;
 }
 
@@ -349,12 +372,14 @@ li:hover {
 .intro-section .namecontent__container:before {
   content: '{';
   left: 0;
+  color: #7D3C98;
 }
 
 .intro-section .namecontent__container:after {
   content: '}';
   position: absolute;
   right: 0;
+  color: #7D3C98;
 }
 
 .intro-section .namecontent__container:before,
