--- a/src/pages/Homepage/IntroWords.css
+++ b/src/pages/Homepage/IntroWords.css
@@ -31,9 +31,9 @@
 }
 
 .paragraph-container {
-  margin-top: 40px;
   width: 100%;
   text-align: right;
+  padding: 15px 0px 25px 25px;
 }
 
 .intro-description {
@@ -61,11 +61,6 @@
     opacity: 1;
     transform: translateY(0);
   }
-}
-
-.animated-passionate-text {
-  margin-top: 40px;
-  height: 200px;
 }
 
 .intro-contact {
@@ -105,7 +100,7 @@
 }
 
 .intro-contact:hover {
-  color: white !important;
+  color: black !important;
   animation: crazy 0.8s linear infinite;
 }
 
