scroll appear effect on project & contact sections

--- a/src/pages/Homepage/Projects.css
+++ b/src/pages/Homepage/Projects.css
@@ -13,6 +13,16 @@
   padding-top: 30px;
 }
 
+.fade-in-section {
+  opacity: 0;
+  transition: opacity 0.5s;
+}
+
+.fade-in-section.is-visible {
+  opacity: 1;
+}
+
+
 .project-wrap h1{
   text-align: center;
   font-size: 40px;
