--- a/src/pages/Homepage/Contact.css
+++ b/src/pages/Homepage/Contact.css
@@ -6,6 +6,16 @@
     margin-bottom: 0;
     padding-bottom: 0;
   }
+
+  .fade-in-section {
+    opacity: 0;
+    transition: opacity 0.5s;
+}
+
+.fade-in-section.is-visible {
+    opacity: 1;
+}
+
   
   body[data-theme='dark'] .contact_content {
     color: white;
