--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -84,6 +84,12 @@ li:hover {
   transition: 200ms cubic-bezier(0, 0, 0.2, 1) 0ms;
 }
 
+/* Existing CSS imports */
+
+/* Your new styles */
+.section {
+  position: relative;
+}
 
 /* Intro Page */
 
@@ -91,6 +97,7 @@ li:hover {
 .intro-section {
   background-size: cover;
   background-position: center;
+  background: linear-gradient(90deg, #f3f3f3 50%, #fff 50%);
 }
 
 
@@ -153,7 +160,7 @@ li:hover {
   height: 50px;
   border-left: 6.5px solid transparent;
   border-right: 6.5px solid transparent;
-  border-top: 25px solid #7D3C98; 
+  border-top: 25px solid #7D3C98;
   position: absolute;
   top: 0;
   right: 0;
@@ -333,19 +340,19 @@ li:hover {
 
 /* Additional styling for 📦 elements */
 .intro-section .📦:nth-child(2):after {
-  background-color: #884EA0;  
+  background-color: #884EA0;
 }
 
 .intro-section .📦:nth-child(3):after {
-  background-color: #A569BD;  
+  background-color: #A569BD;
 }
 
 .intro-section .📦:nth-child(4):after {
-  background-color: #BB8FCE; 
+  background-color: #BB8FCE;
 }
 
 .intro-section .📦:nth-child(5):after {
-  background-color: #C39BD3; 
+  background-color: #C39BD3;
 }
 
 .intro-section .name-highlight {
@@ -463,7 +470,7 @@ li:hover {
 .intro-section .avatar {
   display: inline-block;
   width: 120px;
-  height: 120px; 
+  height: 120px;
   margin-bottom: 25px;
 }
 
@@ -547,11 +554,13 @@ li:hover {
     height: 3px;
     transform: scaleX(1);
   }
+
   50% {
     opacity: 1;
     height: 28px;
     transform: scaleX(1.5);
   }
+
   100% {
     opacity: 0.35;
     height: 3px;
@@ -634,14 +643,14 @@ li:hover {
 }
 
 
-.about-me-section .lovetech-section{
+.about-me-section .lovetech-section {
   margin-top: 30px;
 }
 
 .about-me-section .about-description .tech-stack {
   padding-top: 10px;
   list-style-type: none;
-  display: grid; 
+  display: grid;
   grid-template-columns: repeat(2, minmax(150px, 1fr));
 }
 
@@ -681,7 +690,7 @@ li:hover {
   70%,
   90% {
     width: 100%;
-    
+
   }
 }
 
@@ -737,7 +746,7 @@ li:hover {
   border-radius: 50%;
 }
 
-.about-me-section .timeline__item ul{
+.about-me-section .timeline__item ul {
   display: flex;
 }
 
@@ -781,4 +790,3 @@ li:hover {
   background-size: cover;
   background-position: center;
 }
-
