--- a/src/pages/Homepage/AnimatedPassionateText.css
+++ b/src/pages/Homepage/AnimatedPassionateText.css
@@ -1,4 +1,4 @@
-.animated-text {
+/* .animated-text {
     height: 200px;
     font-size: 30px;
     margin: 10px;
@@ -18,4 +18,4 @@
         opacity: 1;
         transform: translateY(0);
     }
-}
+} */
