--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -2,12 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
+/* * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "NTR", sans-serif;
-}
+} */
 
 
 body {
@@ -16,7 +16,6 @@ body {
   background-position: center;
 }
 
-/* Hide vertical scroll bar */
 body::-webkit-scrollbar {
   width: 0;
   height: 0;
@@ -84,20 +83,27 @@ li:hover {
   transition: 200ms cubic-bezier(0, 0, 0.2, 1) 0ms;
 }
 
-/* Existing CSS imports */
 
 /* Your new styles */
 .section {
   position: relative;
 }
 
-/* Intro Page */
+.app-wrapper {
+  display: flex-start;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 868px;
+  margin: 0 auto;
+}
 
+/* Intro Page */
+/* 
 
 .intro-section {
   background-size: cover;
   background-position: center;
-  background: linear-gradient(90deg, #f3f3f3 50%, #fff 50%);
+  background-color: #FEFFD6;
 }
 
 
@@ -198,7 +204,6 @@ li:hover {
   100% {
     background-color: #23D3FB;
     transform: translatex(calc(250px - (33px * 1.25)));
-    /* Customize as needed */
   }
 }
 
@@ -338,7 +343,6 @@ li:hover {
   }
 }
 
-/* Additional styling for 📦 elements */
 .intro-section .📦:nth-child(2):after {
   background-color: #884EA0;
 }
@@ -356,8 +360,8 @@ li:hover {
 }
 
 .intro-section .name-highlight {
-  color: #7D3C98;
-  font-weight: bolder;
+  font-size: 38px;
+    color: #A7D6AA;
 }
 
 .intro-section .name-content {
@@ -472,7 +476,7 @@ li:hover {
   width: 120px;
   height: 120px;
   margin-bottom: 25px;
-}
+} */
 
 
 
