--- a/src/pages/Homepage/Landing Page/HeaderSection.css
+++ b/src/pages/Homepage/Landing Page/HeaderSection.css
@@ -3,9 +3,9 @@
     height: 4px;
     width: 868px;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: flex-start;
-    padding-top: 200px;
+    padding-top: 130px;
 }
 .header-label {
     width: 100%;
@@ -63,6 +63,7 @@
 
 .header-animation-content {
     overflow: hidden;
+    height: 50px;
     font-size: 35px;
     line-height: 40px;
     color: #6e888f;
@@ -88,7 +89,7 @@
 
 .header-animation-container:after {
     content: '}';
-    position: relative;
+    position: absolute;
     right: 0;
     color: #493552;
 }
@@ -111,7 +112,7 @@
     text-align: left;
     list-style: none;
     animation-name: change;
-    animation-duration: 10s;
+    animation-duration: 9s;
     animation-iteration-count: infinite;
 }
 
@@ -131,23 +132,38 @@
 }
 
 @keyframes change {
-    0%, 12.66%, 100% {
-        transform: translate3d(0, 0, 0);
+
+    0%,
+    12.66%,
+    100% {
+      transform: translate3d(0, 0, 0);
     }
-    16.66%, 29.32% {
-        transform: translate3d(0, -25%, 0);
+  
+    16.66%,
+    29.32% {
+      transform: translate3d(0, -25%, 0);
     }
-    33.32%, 45.98% {
-        transform: translate3d(0, -50%, 0);
+  
+    33.32%,
+    45.98% {
+      transform: translate3d(0, -50%, 0);
     }
-    49.98%, 62.64% {
-        transform: translate3d(0, -75%, 0);
+  
+    49.98%,
+    62.64% {
+      transform: translate3d(0, -75%, 0);
     }
-    66.64%, 79.3% {
-        transform: translate3d(0, -50%, 0);
+  
+    66.64%,
+    79.3% {
+      transform: translate3d(0, -50%, 0);
     }
-    83.3%, 95.96% {
-        transform: translate3d(0, -25%, 0);
+  
+    83.3%,
+    95.96% {
+      transform: translate3d(0, -25%, 0);
     }
-}
+  }
+
+
 
