--- a/src/pages/Homepage/AboutPage/PersonalInfo.css
+++ b/src/pages/Homepage/AboutPage/PersonalInfo.css
@@ -1,69 +1,3 @@
-/* .personal-info-container {
-    height: 435px;
-    width: 577px;
-    position: relative;
-}
-
-.name-text {
-    color: #b91646;
-    font-family: "Roboto-ExtraBold", Helvetica;
-    font-size: 44px;
-    font-weight: 800;
-    left: 54px;
-    letter-spacing: 0;
-    line-height: 41.6px;
-    position: absolute;
-    text-align: center;
-    top: 17px;
-    white-space: nowrap;
-    width: 481px;
-}
-
-.graduation-icon {
-    height: 45px;
-    left: 37px;
-    position: absolute;
-    top: 87px;
-    width: 45px;
-}
-
-.college-text {
-    color: #000000;
-    font-family: "Roboto-Regular", Helvetica;
-    font-size: 36px;
-    font-weight: 400;
-    left: 48px;
-    letter-spacing: 0;
-    line-height: 41.6px;
-    position: absolute;
-    text-align: center;
-    top: 89px;
-    width: 504px;
-}
-
-.job-icon {
-    height: 44px;
-    left: 38px;
-    position: absolute;
-    top: 165px;
-    width: 44px;
-}
-
-.job-text {
-    color: #000000;
-    font-family: "Roboto-Regular", Helvetica;
-    font-size: 36px;
-    font-weight: 400;
-    left: 197px;
-    letter-spacing: 0;
-    line-height: 41.6px;
-    position: absolute;
-    text-align: center;
-    top: 164px;
-    white-space: nowrap;
-} */
-
-
 /* PersonalDetails.css */
 .personal-details-container {
     background-color: #faf3e0;
@@ -71,6 +5,11 @@
     border-radius: 25px;
     height: 335px;
     width: 400px;
+    position: relative; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .name-text {
@@ -81,6 +20,7 @@
     position: absolute;
     top: 17px;
 }
+
 
 .college-detail {
     height: 42px;
@@ -95,13 +35,9 @@
     font-family: "Roboto-Regular", Helvetica;
     font-size: 22px;
     font-weight: 400;
-    left: 11px;
     letter-spacing: 0;
-    line-height: 41.6px;
-    position: absolute;
     text-align: center;
-    top: 0;
-    width: 504px;
+    width: 350px;
 }
 
 .graduation-cap {
@@ -112,26 +48,29 @@
     width: 45px;
 }
 
-.job-detail {
-    height: 44px;
-    left: 33px;
+.college-detail {
+    height: 42px;
+    left: 32px;
     position: absolute;
-    top: 160px;
-    width: 343px;
+    top: 85px;
 }
+
+.job-detail {
+    height: 42px;
+    left: 32px;
+    position: absolute;
+}
+
 
 .job-name {
     color: #000000;
     font-family: "Roboto-Regular", Helvetica;
     font-size: 22px;
     font-weight: 400;
-    left: 159px;
+    left: 110px;
     letter-spacing: 0;
-    line-height: 41.6px;
-    position: absolute;
     text-align: center;
-    top: 0;
-    white-space: nowrap;
+    width: 350px;
 }
 
 .employee-line-icon {
@@ -140,4 +79,54 @@
     position: absolute;
     top: 0;
     width: 44px;
+}
+
+.tech-text {
+    color: #000000;
+    padding-top: 30px;
+    font-family: "Roboto-Regular", Helvetica;
+    font-size: 22px;
+    font-weight: 400;
+    left: 110px;
+    letter-spacing: 0;
+    text-align: center;
+    width: 350px;
+}
+
+.skills{
+    padding-top: 130px;
+}
+
+.skills-list {
+    list-style: none;
+    padding-top: 30px;
+    display: flex;
+    justify-content: space-around; /* Adjust as needed */
+}
+
+.skill-item {
+    position: relative;
+    text-align: center;
+}
+
+.icon-container {
+    position: relative; /* Set to relative to allow absolute positioning within it */
+}
+
+.skill-icon {
+    font-size: 2em; /* Adjust icon size as needed */
+}
+
+.skill-text {
+    display: none;
+    font-size: 0.8em;
+    position: absolute; /* Absolute positioning */
+    bottom: -20px; /* Adjust this value to position the text properly */
+    left: 50%;
+    transform: translateX(-50%); /* Center the text */
+    white-space: nowrap; /* Prevents the text from breaking into multiple lines */
+}
+
+.skill-item:hover .skill-text {
+    display: block;
 }
