--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -2,13 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-/* * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "NTR", sans-serif;
-} */
-
 
 body {
   overflow-x: hidden;
@@ -83,8 +76,6 @@ li:hover {
   transition: 200ms cubic-bezier(0, 0, 0.2, 1) 0ms;
 }
 
-
-/* Your new styles */
 .section {
   position: relative;
 }
@@ -97,397 +88,11 @@ li:hover {
   margin: 0 auto;
 }
 
-/* Intro Page */
-/* 
 
-.intro-section {
+
+/* .about-me-section {
   background-size: cover;
   background-position: center;
-  background-color: #FEFFD6;
-}
-
-
-.intro-section .section-container {
-  width: 250px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 90px;
-  gap: 45px;
-}
-
-.intro-section .animation-container {
-  margin-right: 30px;
-}
-
-.intro-section .intro-content {
-  padding-right: 20px;
-  width: 90%;
-}
-
-.intro-section .intro-text {
-  padding: 25px;
-}
-
-@keyframes pulse {
-  0% {
-    transform: scale(1);
-    box-shadow: 0 0 5px #BB8FCE;
-  }
-
-  50% {
-    transform: scale(1.1);
-    box-shadow: 0 0 20px #BB8FCE, 0 0 30px #BB8FCE;
-  }
-
-  100% {
-    transform: scale(1);
-    box-shadow: 0 0 5px #BB8FCE;
-  }
-}
-
-.intro-section .📦 {
-  background: none;
-  width: 100px;
-  height: 60px;
-  position: relative;
-  display: block;
-  transform-origin: center;
-  border-radius: 60%;
-  background: linear-gradient(135deg, #7D3C98, #BB8FCE);
-  animation: pulse 2s infinite;
-}
-
-.intro-section .📦:after {
-  top: -33px;
-  left: -16.5px;
-  content: "";
-  width: 50px;
-  height: 50px;
-  border-left: 6.5px solid transparent;
-  border-right: 6.5px solid transparent;
-  border-top: 25px solid #7D3C98;
-  position: absolute;
-  top: 0;
-  right: 0;
-  background-color: #C39BD3;
-  border-radius: 15%;
-  box-shadow: 0px 0px 10px 0px rgba(28, 159, 255, 0.4);
-}
-
-.intro-section .📦:nth-child(1) {
-  animation: slide 1.5s ease-in-out infinite alternate;
-}
-
-.intro-section .📦:nth-child(2) {
-  animation: flip-1 1.5s ease-in-out infinite alternate;
-}
-
-.intro-section .📦:nth-child(3) {
-  animation: flip-2 1.5s ease-in-out infinite alternate;
-}
-
-.intro-section .📦:nth-child(4) {
-  animation: flip-3 1.5s ease-in-out infinite alternate;
-}
-
-.intro-section .📦:nth-child(5) {
-  animation: flip-4 1.5s ease-in-out infinite alternate;
-}
-
-@keyframes slide {
-  0% {
-    background-color: #1795FF;
-    transform: translatex(0vw);
-  }
-
-  100% {
-    background-color: #23D3FB;
-    transform: translatex(calc(250px - (33px * 1.25)));
-  }
-}
-
-@keyframes flip-1 {
-
-  0%,
-  15% {
-    transform: rotate(0);
-  }
-
-  35%,
-  100% {
-    transform: rotate(-180deg);
-  }
-}
-
-@keyframes flip-2 {
-
-  0%,
-  30% {
-    transform: rotate(0);
-  }
-
-  50%,
-  100% {
-    transform: rotate(-180deg);
-  }
-}
-
-@keyframes flip-3 {
-
-  0%,
-  45% {
-    transform: rotate(0);
-  }
-
-  65%,
-  100% {
-    transform: rotate(-180deg);
-  }
-}
-
-@keyframes flip-4 {
-
-  0%,
-  60% {
-    transform: rotate(0);
-  }
-
-  80%,
-  100% {
-    transform: rotate(-180deg);
-  }
-}
-
-@keyframes squidge-1 {
-  5% {
-    transform-origin: center bottom;
-    transform: scalex(1.3) scaley(0.7);
-  }
-
-  15%,
-  20% {
-    transform-origin: center bottom;
-    transform: scalex(1) scaley(1);
-  }
-
-  30% {
-    transform-origin: center top;
-    transform: scalex(1.3) scaley(0.7);
-  }
-
-  40%,
-  45% {
-    transform-origin: center top;
-    transform: scalex(1) scaley(1);
-  }
-}
-
-@keyframes squidge-2 {
-  35% {
-    transform-origin: center bottom;
-    transform: scalex(1.3) scaley(0.7);
-  }
-
-  45%,
-  50% {
-    transform-origin: center bottom;
-    transform: scalex(1) scaley(1);
-  }
-
-  60% {
-    transform-origin: center top;
-    transform: scalex(1.3) scaley(0.7);
-  }
-
-  70%,
-  75% {
-    transform-origin: center top;
-    transform: scalex(1) scaley(1);
-  }
-}
-
-@keyframes squidge-3 {
-  65% {
-    transform-origin: center bottom;
-    transform: scalex(1.3) scaley(0.7);
-  }
-
-  75%,
-  80% {
-    transform-origin: center bottom;
-    transform: scalex(1) scaley(1);
-  }
-
-  85% {
-    transform-origin: center top;
-    transform: scalex(1.3) scaley(0.7);
-  }
-
-  90%,
-  95% {
-    transform-origin: center top;
-    transform: scalex(1) scaley(1);
-  }
-}
-
-@keyframes squidge-4 {
-  95% {
-    transform-origin: center bottom;
-    transform: scalex(1.3) scaley(0.7);
-  }
-
-  100% {
-    transform-origin: center bottom;
-    transform: scalex(1) scaley(1);
-  }
-}
-
-.intro-section .📦:nth-child(2):after {
-  background-color: #884EA0;
-}
-
-.intro-section .📦:nth-child(3):after {
-  background-color: #A569BD;
-}
-
-.intro-section .📦:nth-child(4):after {
-  background-color: #BB8FCE;
-}
-
-.intro-section .📦:nth-child(5):after {
-  background-color: #C39BD3;
-}
-
-.intro-section .name-highlight {
-  font-size: 38px;
-    color: #A7D6AA;
-}
-
-.intro-section .name-content {
-  overflow: hidden;
-  font-size: 35px;
-  line-height: 40px;
-  color: #ecf0f1;
-}
-
-.intro-section .namecontent__container {
-  font-weight: 600;
-  overflow: hidden;
-  height: 43px;
-  padding: 0 40px;
-  position: relative;
-}
-
-.intro-section .namecontent__container:before {
-  content: '{';
-  left: 0;
-  color: #7D3C98;
-}
-
-.intro-section .namecontent__container:after {
-  content: '}';
-  position: absolute;
-  right: 0;
-  color: #7D3C98;
-}
-
-.intro-section .namecontent__container:before,
-.intro-section .namecontent__container:after {
-  position: absolute;
-  top: 0;
-  color: #16a085;
-  font-size: 42px;
-  line-height: 40px;
-  animation-name: opacity;
-  animation-duration: 2s;
-  animation-iteration-count: infinite;
-}
-
-.intro-section .namecontent__container__text {
-  display: inline-flex;
-  float: left;
-  margin: 0;
-}
-
-.intro-section .namecontent__container__list {
-  margin-top: 0;
-  padding-left: 110px;
-  text-align: left;
-  list-style: none;
-  animation-name: change;
-  animation-duration: 10s;
-  animation-iteration-count: infinite;
-}
-
-.intro-section .namecontent__container__list__item {
-  line-height: 40px;
-  margin: 0;
-}
-
-@keyframes opacity {
-
-  0%,
-  100% {
-    opacity: 0;
-  }
-
-  50% {
-    opacity: 1;
-  }
-}
-
-@keyframes change {
-
-  0%,
-  12.66%,
-  100% {
-    transform: translate3d(0, 0, 0);
-  }
-
-  16.66%,
-  29.32% {
-    transform: translate3d(0, -25%, 0);
-  }
-
-  33.32%,
-  45.98% {
-    transform: translate3d(0, -50%, 0);
-  }
-
-  49.98%,
-  62.64% {
-    transform: translate3d(0, -75%, 0);
-  }
-
-  66.64%,
-  79.3% {
-    transform: translate3d(0, -50%, 0);
-  }
-
-  83.3%,
-  95.96% {
-    transform: translate3d(0, -25%, 0);
-  }
-}
-
-.intro-section .avatar {
-  display: inline-block;
-  width: 120px;
-  height: 120px;
-  margin-bottom: 25px;
-} */
-
-
-
-
-/* About Me Section */
-
-.about-me-section {
-  background-size: cover;
-  background-position: center;
-  padding-left: 45px;
-  padding-right: 35px;
 }
 
 
@@ -695,8 +300,6 @@ li:hover {
 }
 
 
-/* About Me Timeline */
-
 .about-me-section .timeline {
   display: flex;
   justify-content: flex-start;
@@ -770,8 +373,6 @@ li:hover {
 }
 
 
-/* About Me Image */
-
 
 .about-me-section .about-image {
   padding-left: 100px;
@@ -785,6 +386,7 @@ li:hover {
   box-shadow: 6px 13px 23px -5px rgba(0, 0, 0, 0.46);
   border: none;
 }
+*/
 
 .projects-section {
   background-size: cover;
