--- a/src/pages/Homepage/Landing Page/Landing.css
+++ b/src/pages/Homepage/Landing Page/Landing.css
@@ -1,11 +1,8 @@
 .landing-container {
     background-color: #ffffff;
-    display: flex;
     flex-direction: column;
-    align-items: center;
-    width: 100%;
-    height: 924px;
-    position: relative;
+    height: 850px;
+    padding-left: 30px;
 }
 
 
