--- a/src/pages/Homepage/AboutPage/AboutMyself.css
+++ b/src/pages/Homepage/AboutPage/AboutMyself.css
@@ -1,17 +1,33 @@
 .about-myself-div {
     background-color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
     height: 924px;
-    position: relative;
+    margin: auto;
+}
+
+.top-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0 20px;
 }
 
 .image-container {
-    width: 336px;
+    width: 350px;
 }
 
 .about-me-container {
-    left: 386px;
-    position: absolute;
-    top: 0.5px;
+    flex-grow: 1; 
+    padding-left: 35px;
 }
 
-
+.bottom-row {
+    width: 100%; 
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
