--- a/src/pages/Homepage/AboutPage/NetworkingEvents.css
+++ b/src/pages/Homepage/AboutPage/NetworkingEvents.css
@@ -4,7 +4,7 @@
     border-radius: 25px;
     box-shadow: inset 0px 4px 4px #00000040;
     height: 378px;
-    position: absolute;
-    top: 380px;
-    width: 790px;
+    width: 790px; /* Adjust as needed */
+    margin: auto;
+
 }
