--- a/src/pages/Homepage/ExperiencePage/ExperienceSection.css
+++ b/src/pages/Homepage/ExperiencePage/ExperienceSection.css
@@ -6,7 +6,7 @@
   background-color: #faf7f2;
   border: 5px solid #001f3f;
   border-radius: 30px;
-  padding: 20px;
+  padding-left: 20px;
 }
 
 .company-list {
