Update personal info and experience section styles

--- a/src/pages/Homepage/ExperiencePage/ExperienceSection.css
+++ b/src/pages/Homepage/ExperiencePage/ExperienceSection.css
@@ -1,3 +1,8 @@
+.experience-container {
+  background-color: #ffffff;
+  margin-top: 50px;
+}
+
 .experience-box {
   height: 500px;
   width: 790px;
