--- a/src/pages/Homepage/Landing Page/DescriptionSection.css
+++ b/src/pages/Homepage/Landing Page/DescriptionSection.css
@@ -1,5 +1,5 @@
 .description-section {
-    width: 729px;
+    width: auto;
     position: relative;
     overflow: hidden;
     margin-right: 130px;
