--- a/src/pages/Homepage/Landing Page/Landing.css
+++ b/src/pages/Homepage/Landing Page/Landing.css
@@ -1,9 +1,15 @@
 .landing-container {
     background-color: #ffffff;
+    display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
     height: 850px;
-    padding-left: 30px;
+    width: 100%;
+    margin: auto;
+    padding-left: 50px;
 }
+
 
 
 @keyframes slideUp {
