--- a/src/pages/Homepage/Landing Page/HeaderSection.css
+++ b/src/pages/Homepage/Landing Page/HeaderSection.css
@@ -1,18 +1,19 @@
 .header-content-wrapper {
     position: relative;
-    height: 4px;
+    min-height: 300px;
     width: auto;
     display: flex;
+    flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
 }
 .header-label {
     width: 100%;
-    height: 354px; /* height from the Figma design */
+    min-height: 300px;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    /* justify-content: center; */
+    align-items: center;
+    justify-content: center;
     position: relative;
     box-sizing: border-box;
 }
@@ -67,7 +68,8 @@
     line-height: 40px;
     color: #6e888f;
     position: relative;
-    display: block;
+    display: flex;
+    justify-content: center;
     
 }
 
